refactor: 코드 리팩토링
정보 가져옴
- 불필요한 코드 제거 및 함수 분리
- async await 코드 개선
- Promise 기반으로 요청 코드 변경
    * 1차 메모리 leak 개선

미흡 사항
- decimal 요청 부분에서 메모리 누수 존재(2차 개선 필요)
- 트랜잭션 불러오는 성능 문제 존재
- 인터페이스 정의 부족

--- a/src/Styles/Table.module.css
+++ b/src/Styles/Table.module.css
@@ -1,6 +1,7 @@
 .table {
   width: 100%;
   text-align: center;
+  border-collapse: collapse;
 }
 
 .table table {
@@ -15,6 +16,15 @@
   text-align: start;
 }
 
-.row td {
-  overflow-x: scroll;
+.table th {
+  padding: 0.5em 0;
+  border-bottom: 1px solid black;
+}
+
+.table td {
+  padding: 0.5em 0;
+}
+
+.table tbody tr {
+  border-bottom: 1px solid #e7eaf3;
 }
