--- a/src/Styles/Table.module.css
+++ b/src/Styles/Table.module.css
@@ -1,12 +1,6 @@
 .table {
-  width: 100%;
   text-align: center;
   border-collapse: collapse;
-}
-
-.table table {
-  width: 95%;
-  text-align: center;
 }
 
 .table caption {
@@ -25,6 +19,25 @@
   padding: 0.5em 0;
 }
 
-.table tbody tr {
+.table tbody tr:not(:last-child) {
   border-bottom: 1px solid #e7eaf3;
+}
+
+.pid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  cursor: pointer;
+  margin: 0 auto;
+}
+
+.table-wrapper {
+  display: flex;
+  justify-content: center;
+  padding: 5em 0;
+}
+
+.table-wrapper table {
+  border: 1px solid black;
 }
